[tool.poetry]
name = "slack-json-converter"
version = "0.1.0"
description = ""
authors = ["Takayuki Yano <12232024+yano404@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
